# OpenMMO

./: .env.example  .gitignore  AGENTS.md  BRANCH_PROTECTION_ACTIVE.md  Cargo.toml  LICENSE  Makefile  PHASE0_COMPLETE.md  README.md  README_DATABASE.md  SETUP_COMPLETE.md  TESTING.md  clippy.toml  docker-compose.yml  open_mmorpg_mvp_specification.md  rustfmt.toml  setup.sh  setup_godot.sh  test_login_quick.sh  test_login_system.sh
.github/: BRANCH_PROTECTION.md  CI_STATUS.md  README.md  pull_request_template.md
.sqlx/: config.json  query-0e49be099bbd99f659999d05dad117dc03a50cb3988790ac6d4eb21ae685dba6.json  query-1aadcefcc54022f9d77a8d01fd630db346ecee09e664852ae707c42516917950.json  query-2d35d91329eb3b15c5f84815a6900addd56a40f89b2f36b73dfc04754ec117f3.json  query-4cc3e96c436f20a302ab4471ce11b8a6deda2c2b28242a1700aff185601574df.json  query-6897f2853b4a5e5098a283e5ef3b6b76a7cb1752f844b7f92cedb6f771b93c78.json  query-76c643d18eb34c5dd6141aae4854a99592e6fcda19b67895635b2723afc54c39.json  query-955e48ba3773058fedc317b0eddc24f9a0090b58737ae86bcc90b525ce0cfd5f.json  query-b15b8d2a355806d9ea934999502495aeb4e409a8eedefbe7a658a83fe285b798.json  query-d361641eeb7a75b4eee5867d79157a6ac6e5929d6d28c9a3684bd2ca1ecdd0fa.json  query-dcdf9440ff9d67781cfdd434071dc7afe060ec1a65f7b1362635ca58aa2ea818.json  query-fb1df5c059716e55450f64368e845028dc8b36aa02387669cd1b832407593caa.json  (+1 more)
client/: .gitignore  (+4 more)
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/accounts/: errors.rs  mod.rs  service.rs
server/src/db/: conversions.rs  mod.rs  models.rs  queries.rs  tests.rs
server/src/entities/: components.rs  entities.rs  mod.rs  system.rs
server/src/equipment/: mod.rs
server/src/inventory/: mod.rs
server/src/items/: item_definitions.rs  item_stats.rs  item_types.rs  mod.rs
server/src/loot/: mod.rs
server/src/network/: messages.rs  mod.rs
server/src/simulation/: combat_system.rs  mod.rs  movement_system.rs  tick_loop.rs
server/src/world/: mod.rs  world_state.rs  zone.rs
(+66 files in other folders)
