[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower = "0.4"
tower-http = "0.5"

[build-dependencies]
prost-build = "0.13"