[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower = "0.4"
tower-http = "0.5"
argon2 = "0.5"
regex = "1.10"
rand = "0.8"

[build-dependencies]
prost-build = "0.13"

[package.metadata.cargo-machete]
ignored = ["prost", "tokio-tungstenite", "tower", "tower-http"]